# pfc_init_node

./: .gitignore  CMakeLists.txt  README.md  package.xml  testing_notes.txt
include/pfc_init/: csv_reader.h  matcher.h  needle_image.h  needle_pose.h  needle_template.h  pfc_initializer.h  pfc_initializer_constants.h  pose_helper.h  template_match.h
src/: csv_reader.cpp  main.cpp  matcher.cpp  needle_image.cpp  needle_pose.cpp  needle_template.cpp  pfc_init_node.cpp  pfc_initializer.cpp  pose_helper.cpp  template_match.cpp
test_results/: .~lock.pfcinit_performance_data_2020-09-19-20:00:57.csv#  .~lock.pfcinit_performance_data_2020-09-25-12:47:31.csv#  .~lock.pfcinit_performance_data_2020-09-27-13:30:30.csv#  pfcinit_performance_data_2020-09-20-23:11:50.csv  pfcinit_performance_data_2020-09-20-23:55:37.csv  pfcinit_performance_data_2020-09-25-12:47:31.csv  pfcinit_performance_data_2020-09-25-13:13:01.csv  pfcinit_performance_data_2020-09-25-13:19:11.csv  pfcinit_performance_data_2020-09-25-15:16:17.csv  pfcinit_performance_data_2020-09-26-12:32:52.csv  pfcinit_performance_data_2020-09-26-13:34:33.csv  pfcinit_performance_data_2020-09-26-13:52:35.csv  pfcinit_performance_data_2020-09-26-14:58:05.csv  pfcinit_performance_data_2020-09-26-15:18:56.csv  pfcinit_performance_data_2020-09-27-12:37:04.csv  pfcinit_performance_data_2020-09-27-13:30:30.csv  pfcinit_performance_data_2020-09-27-20:45:45.csv  pfcinit_performance_data_2020-10-06-11:11:57.csv  pfcinit_performance_data_2020-10-06-11:16:54.csv  pfcinit_performance_data_2020-10-06-11:41:15.csv  pfcinit_performance_data_2020-10-06-11:57:03.csv  pfcinit_performance_data_2020-10-06-12:55:47.csv  pfcinit_performance_data_2020-10-16-13:07:09.csv  pfcinit_performance_data_2020-10-16-13:10:39.csv  pfcinit_performance_data_2020-10-16-13:47:28.csv  pfcinit_performance_data_2020-10-16-15:02:38.csv  pfcinit_performance_data_2020-10-16-15:20:19.csv  pfcinit_performance_data_2020-10-16-15:24:06.csv  pfcinit_performance_data_2020-10-16-15:27:11.csv  pfcinit_performance_data_2020-10-16-15:30:34.csv  pfcinit_performance_data_2020-10-16-15:37:00.csv  pfcinit_performance_data_2020-10-16-15:44:40.csv  pfcinit_performance_data_2020-10-17-16:45:26.csv  pfcinit_performance_data_2020-10-17-16:47:43.csv  pfcinit_performance_data_2020-10-17-16:56:19.csv  pfcinit_performance_data_2020-10-17-16:59:32.csv  pfcinit_performance_data_2020-10-17-17:21:17.csv  pfcinit_performance_data_2020-10-17-21:17:12.csv  pfcinit_performance_data_2020-10-24-16:15:17.csv  pfcinit_performance_data_2020-10-24-16:27:22.csv  (+18 more)
